--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
                     <h2>
                         <a href="Desenvolvimento de Sistemas Web de Alta Performance.pptx (1).pdf" target="_blank">Lucas Melo</a>
                     </h2>
-                    <p class="descricao-meta">Integrante do grupo responsável pela apresentação do grupo, do tema do trabalho e dos tópicos iniciais. Tais como ... clique em mais informações para ver a apresentação referente aos tópicos citados acima.</p>
+                    <p class="descricao-meta">Integrante responsável pela apresentação do grupo, do tema do trabalho e dos tópicos iniciais. Tais como introdução/apresentação do tema, a importancia do planejamento e da arquitetura e desenvolvimento front-end. <br>clique em mais informações para ver a apresentação.</p>
                     <a href="https://pt.solar-energia.net/solar-termica/energia-solar-termoeletrica/energia-solar-concentracao" target="_blank">Mais informações</a>
                 </div>
                 <div class="item-resultado">
                     <h2>
-                        <a href="https://www.portalsolar.com.br/energia-geotermica" target="_blank">Marcelo Favaro</a>
+                        <a href="https://www.portalsolar.com.br/energia-geotermica" target="_blank">Felipe Moreira</a>
                     </h2>
-                    <p class="descricao-meta">A energia geotérmica aproveita o calor do interior da Terra para gerar eletricidade. Ao perfurar poços profundos, é possível acessar o vapor ou a água quente que se encontram nas camadas subterrâneas do planeta. Essa água, em contato com a superfície, transforma-se em vapor, que rotaciona as turbinas, gerando energia.</p>
+                    <p class="descricao-meta">Integrante responsável pela apresentação dos seguintes tópicos desenvolvimento do Backend, Banco de dados e segurança. <br>clique em mais informações para ver a apresentação.</p>
                     <a href="https://www.portalsolar.com.br/energia-geotermica" target="_blank">Mais informações</a>
                 </div>
                 <div class="item-resultado">
                     <h2>
-                        <a href="https://www.nationalgeographic.pt/meio-ambiente/energia-mares-ou-como-aproveitar-potencial-ilimitado-mar_5157#:~:text=Tamb%C3%A9m%20conhecida%20como%20energia%20dos%20oceanos%2C%20marinha%20ou,de%20aproveitamento%20de%20energia%20mais%20vers%C3%A1teis%20que%20conhecemos." target="_blank">Felipe Moreira</a>
+                        <a href="https://www.nationalgeographic.pt/meio-ambiente/energia-mares-ou-como-aproveitar-potencial-ilimitado-mar_5157#:~:text=Tamb%C3%A9m%20conhecida%20como%20energia%20dos%20oceanos%2C%20marinha%20ou,de%20aproveitamento%20de%20energia%20mais%20vers%C3%A1teis%20que%20conhecemos." target="_blank">Marcelo Favaro</a>
                     </h2>
-                    <p class="descricao-meta">A energia marítima é uma fonte de energia renovável que captura a imensa força dos oceanos para gerar eletricidade. Ao aproveitar o movimento constante das ondas, a variação do nível da água nas marés e a força impetuosa das correntes marinhas, transformando essa energia cinética em eletricidade.</p>
+                    <p class="descricao-meta">Integrante responsável pela apresentação dos seguintes tópicos, teste e monitoramento, escalabilidade, CI/CD e deploy contínuo. <br>clique em mais informações para ver a apresentação.</p>
                     <a href="https://www.nationalgeographic.pt/meio-ambiente/energia-mares-ou-como-aproveitar-potencial-ilimitado-mar_5157#:~:text=Tamb%C3%A9m%20conhecida%20como%20energia%20dos%20oceanos%2C%20marinha%20ou,de%20aproveitamento%20de%20energia%20mais%20vers%C3%A1teis%20que%20conhecemos." target="_blank">Mais informações</a>
                 </div>
             </section>
